# SfM

./: .gitignore  README.md
calibration_data/: realsense_calib.json
experiments/: cloud.txt
reconstruction/: CMakeLists.txt  cloud.txt  kitti.txt  poses.txt  poses_best.txt  poses_no_opt.txt
reconstruction/include/reconstruction/: bundle_adjust.hpp  coordinate_frame.hpp  dense_reconstruction.hpp  features.hpp  frame.hpp  graph_error_term.hpp  keyframe.fwd.hpp  keyframe.hpp  loop.hpp  map.hpp  mappoint.fwd.hpp  mappoint.hpp  matching.hpp  pinhole.hpp  place_recognition.hpp  recording.hpp  scene_graph.hpp  sfm.hpp  tracker.hpp  utils.hpp  verification.hpp  view.hpp
reconstruction/src/: dense_reconstruction.cpp  essential.cpp  features.cpp  frame.cpp  keyframe.cpp  loop.cpp  map.cpp  mappoint.cpp  matching.cpp  pinhole.cpp  place_recognition.cpp  reconstruct.cpp  recording.cpp  sfm.cpp  tracker.cpp  verification.cpp  visualizer.cpp
utilities/: realsense-record.py
visualization/: CMakeLists.txt  package.xml
